# phoenix

./: CMakeLists.txt  README.md
include/: logger.hpp
src/: logger.cpp  main.cpp
